--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
                         `;
                         });
                         $('#myTable').DataTable();
-                    });
+                    })
+                    .catch(error => console.log(error));
             }
             getDetails();
         });
